--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   get: ^4.7.2
   firebase_core: ^4.0.0
   firebase_messaging: ^16.0.0
-  flutter_local_notifications: ^19.4.0
+  flutter_local_notifications: ^19.4.1
   dio: ^5.8.0+1
   shared_preferences: ^2.5.3
   flutter_localizations:
@@ -27,6 +27,7 @@ dependencies:
   rive: ^0.13.20
   table_calendar: ^3.2.0
   logger: ^2.6.1
+  workmanager: ^0.9.0+2
   
 
 dev_dependencies:
